syntax = "proto3";

package protocol.Messaging.Request;

// PingRequest определяет запрос на пинг
message	PingRequest {
}
